--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
           
         </div>
         <div class="fix-12-12">
-        <video width="300" height="350" muted controls>< src="assets/video/intro.mp4" type="video/mp4"></video>
+        <video width="300" height="350" autoplay="false" loop="true">< src="assets/video/intro.mp4" type="video/mp4"></video>
           
         </div>
       </div>
