--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
           
         </div>
         <div class="fix-12-12">
-        <video width="300" height="350" autoplay="false" loop="true">< src="assets/video/intro.mp4" type="video/mp4"></video>
+        <center><iframe width="250" height="350" src="https://www.youtube.com/embed/6IkIDhYv5Wo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
           
         </div>
       </div>
